--- a/mdt_mainWindow.ui
+++ b/mdt_mainWindow.ui
@@ -86,64 +86,6 @@
          <property name="frameShadow">
           <enum>QFrame::Raised</enum>
          </property>
-         <widget class="QFrame" name="frame">
-          <property name="geometry">
-           <rect>
-            <x>10</x>
-            <y>10</y>
-            <width>31</width>
-            <height>28</height>
-           </rect>
-          </property>
-          <property name="frameShape">
-           <enum>QFrame::StyledPanel</enum>
-          </property>
-          <property name="frameShadow">
-           <enum>QFrame::Plain</enum>
-          </property>
-          <property name="lineWidth">
-           <number>1</number>
-          </property>
-          <widget class="QPushButton" name="leftMenuButton">
-           <property name="geometry">
-            <rect>
-             <x>1</x>
-             <y>2</y>
-             <width>28</width>
-             <height>24</height>
-            </rect>
-           </property>
-           <property name="text">
-            <string/>
-           </property>
-           <property name="icon">
-            <iconset resource="icon/icons.qrc">
-             <normaloff>:/icons/menu.png</normaloff>:/icons/menu.png</iconset>
-           </property>
-           <property name="flat">
-            <bool>true</bool>
-           </property>
-          </widget>
-         </widget>
-        </widget>
-       </item>
-       <item>
-        <widget class="QFrame" name="topRightBtns">
-         <property name="maximumSize">
-          <size>
-           <width>100</width>
-           <height>16777215</height>
-          </size>
-         </property>
-         <property name="styleSheet">
-          <string notr="true"/>
-         </property>
-         <property name="frameShape">
-          <enum>QFrame::StyledPanel</enum>
-         </property>
-         <property name="frameShadow">
-          <enum>QFrame::Raised</enum>
-         </property>
          <layout class="QHBoxLayout" name="horizontalLayout_2">
           <property name="spacing">
            <number>0</number>
@@ -160,64 +102,39 @@
           <property name="bottomMargin">
            <number>0</number>
           </property>
-          <item>
-           <widget class="QPushButton" name="minimizeButton">
-            <property name="maximumSize">
+          <item alignment="Qt::AlignLeft|Qt::AlignVCenter">
+           <widget class="QFrame" name="frame">
+            <property name="minimumSize">
              <size>
-              <width>24</width>
-              <height>24</height>
+              <width>50</width>
+              <height>0</height>
              </size>
             </property>
-            <property name="text">
-             <string/>
+            <property name="frameShape">
+             <enum>QFrame::StyledPanel</enum>
             </property>
-            <property name="icon">
-             <iconset resource="icon/icons.qrc">
-              <normaloff>:/icons/remove.png</normaloff>:/icons/remove.png</iconset>
+            <property name="frameShadow">
+             <enum>QFrame::Plain</enum>
             </property>
-            <property name="flat">
-             <bool>true</bool>
+            <property name="lineWidth">
+             <number>1</number>
             </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QPushButton" name="restoreButton">
-            <property name="maximumSize">
-             <size>
-              <width>24</width>
-              <height>24</height>
-             </size>
-            </property>
-            <property name="text">
-             <string/>
-            </property>
-            <property name="icon">
-             <iconset resource="icon/icons.qrc">
-              <normaloff>:/icons/stop.png</normaloff>:/icons/stop.png</iconset>
-            </property>
-            <property name="flat">
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QPushButton" name="closeButton">
-            <property name="maximumSize">
-             <size>
-              <width>24</width>
-              <height>24</height>
-             </size>
-            </property>
-            <property name="text">
-             <string/>
-            </property>
-            <property name="icon">
-             <iconset resource="icon/icons.qrc">
-              <normaloff>:/icons/close.png</normaloff>:/icons/close.png</iconset>
-            </property>
-            <property name="flat">
-             <bool>true</bool>
-            </property>
+            <layout class="QHBoxLayout" name="horizontalLayout_4">
+             <item>
+              <widget class="QPushButton" name="leftMenuButton">
+               <property name="text">
+                <string/>
+               </property>
+               <property name="icon">
+                <iconset resource="icon/icons.qrc">
+                 <normaloff>:/icons/menu.png</normaloff>:/icons/menu.png</iconset>
+               </property>
+               <property name="flat">
+                <bool>true</bool>
+               </property>
+              </widget>
+             </item>
+            </layout>
            </widget>
           </item>
          </layout>
@@ -362,7 +279,6 @@
     </rect>
    </property>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources>
   <include location="icon/icons.qrc"/>
