Changes to UI, distribiute in class, FSD working with displaying of plot

--- a/ui/mdt_mainWindow.ui
+++ b/ui/mdt_mainWindow.ui
@@ -150,7 +150,7 @@
                 </size>
                </property>
                <property name="text">
-                <string/>
+                <string notr="true"/>
                </property>
                <property name="icon">
                 <iconset resource="icon/icons.qrc">
@@ -320,11 +320,7 @@
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_5">
           <item>
-           <widget class="QLabel" name="label">
-            <property name="text">
-             <string/>
-            </property>
-           </widget>
+           <widget class="PlotWidget" name="bloodWidget"/>
           </item>
          </layout>
         </widget>
@@ -387,7 +383,7 @@
        <item>
         <widget class="QLabel" name="errorBox">
          <property name="text">
-          <string/>
+          <string notr="true"/>
          </property>
         </widget>
        </item>
@@ -407,6 +403,13 @@
    </property>
   </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>PlotWidget</class>
+   <extends>QGraphicsView</extends>
+   <header>pyqtgraph</header>
+  </customwidget>
+ </customwidgets>
  <resources>
   <include location="icon/icons.qrc"/>
  </resources>
